spacing fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1034,6 +1034,8 @@ legend {
     display: block;
     padding-inline: var(--spacer1x);
     background-color: var(--secondaryDark);
+    position: relative;
+    
 }
 
 .navigation-days {
